# legal-dashboard

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
mongo/: init-mongo.js
notebooks/: connect_db.ipynb
