[project]
name = "legal_dashboard"
version = "0.1.0"
description = ""
authors = [{name="Tomislav Bukic", email="tomislav@bukic.net"}]
readme = "README.md"
dependencies = [
    "attrs>=24.3.0",
    "pymongo>=4.10.1",
    "requests>=2.32.3",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29",
    "pre-commit>=4.0",
    "nbdev>=2.3",
    "poethepoet>=0.29",
    "ruff>=0.6.2",
    "nbconvert>=7.16",
    "pytest>=8.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.poetry_hooks]
post_install = "post_install"

[tool.poe.tasks]

    [tool.poe.tasks.pre_commit]
    shell = "pre-commit install"

    [tool.poe.tasks.post_install]
    sequence = ["pre_commit"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
